# ADL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/basic/: CMakeLists.txt  main.c
examples/egl/: CMakeLists.txt  gl.c  gl.h  main.c
examples/timer/: main.c
include/adl/: adl.h  event.h  image.h  linux.h  logging.h  platform.h  status.h  thread.h  timer.h  util.h  window.h
include/adl/linux/: thread.h  timer.h
interface/: adl.h
linux/: thread.c  timer.c  util.c
linux/xcb/: atoms.h  image.c  image.h  window.c  window.h  xcb.c  xcb.h
src/: adl.c  adl.h  image.c  image.h  linkedlist.c  linkedlist.h  logging.c  logging.h  status.c  window.c  window.h
test/: CMakeLists.txt  main.c
